Lots of LayoutUnit assertions when loading a Wikipedia article https://bugs.webkit.org/show_bug.cgi?id=110270

Reviewed by Levi Weintraub.

Change RenderBlock::adjustRectForColumns to ensure that the
endColumn calculation does not overflow.

No new tests, covered by existing tests.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustRectForColumns):
Make the endOffset value be no less than the beforeBorderPadding
value to ensure that endColumn is not negative.


Canonical link: https://commits.webkit.org/128811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143669 268f45cc-cd09-0410-ab3c-d52691b4dbfc